ARM64/configs: mido: Enable CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK.
This is required for due to bugs in the proprietary stack.

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -96,6 +96,7 @@ CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CPU_IDLE=y
