ARM64/configs: mido: Enable Boeffla Wakelock Blocker
Signed-off-by: Rafiester <rafi.haqqi@gmail.com>

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -83,6 +83,7 @@ CONFIG_PM_RUNTIME=y
 CONFIG_PM_DEBUG=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_SUSPEND_TIME=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
