FIXME: ARM64/dts: mido: Disable VADC support for PMI8950
This particular node is keeping the VADC in busy state as it fails to get
die temperature, causing device to never suspend and therefore drains
battery into oblivion.

The following dmesg spam was discovered during repeated aborted suspend:

  [ 1392.851243] qpnp_vadc_conv_seq_request: retry error exceeded
  [ 1392.851285] qpnp_vadc_read: Error reading die_temp
  [ 1396.090897] qpnp_vadc_suspend_noirq: Aborting suspend, adc conversion requested while suspending
  [ 1396.090908] dpm_run_callback(): qpnp_vadc_suspend_noirq+0x0/0xd0 returns -16
  [ 1396.090911] PM: Device 200f000.qcom,spmi:qcom,pmi8950@2:vadc@3100 failed to suspend noirq: error -16

Signed-off-by: Albert I <kras@raphielgang.org>

--- a/arch/arm64/boot/dts/qcom/mido/msm8953-general-mido.dtsi
+++ b/arch/arm64/boot/dts/qcom/mido/msm8953-general-mido.dtsi
@@ -96,6 +96,10 @@
 	};
 
 	qcom,pmi8950@2 {
+		pmi8950_vadc: vadc@3100 {
+			status = "disabled";
+		};
+
 		pmi8950_gpios: gpios {
 			gpio@c000 {
 				status = "okay";
@@ -490,5 +494,11 @@
 		pinctrl-1 = <&fpc_reset_reset>;
 		pinctrl-2 = <&fpc_reset_active>;
 		pinctrl-3 = <&fpc_irq_active>;
+	};
+};
+
+&thermal_zones {
+	chg-temp-adc {
+		status = "disabled";
 	};
 };
