treewide: Disable void-pointer-to-enum-cast warnings when CC=clang
Following the upstream commit: llvm/llvm-project@2a41b31

Compiling with clang show several warning on compile "-Wvoid-pointer-to-enum-cast"
so disable this warning when compiling with clang only.

1 warning generated.
../drivers/media/dvb-core/dvb_frontend.c:2311:7: warning: cast to smaller integer type 'enum fe_sec_mini_cmd' from 'void *' [-Wvoid-pointer-to-enum-cast]
                                                (enum fe_sec_mini_cmd)parg);
                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
../drivers/media/dvb-core/dvb_frontend.c:2320:13: warning: cast to smaller integer type 'enum fe_sec_tone_mode' from 'void *' [-Wvoid-pointer-to-enum-cast]
                                               (enum fe_sec_tone_mode)parg);
                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../drivers/media/dvb-core/dvb_frontend.c:2321:19: warning: cast to smaller integer type 'enum fe_sec_tone_mode' from 'void *' [-Wvoid-pointer-to-enum-cast]
                        fepriv->tone = (enum fe_sec_tone_mode)parg;
                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../drivers/media/dvb-core/dvb_frontend.c:2330:9: warning: cast to smaller integer type 'enum fe_sec_voltage' from 'void *' [-Wvoid-pointer-to-enum-cast]
                                                  (enum fe_sec_voltage)parg);
                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~
../drivers/media/dvb-core/dvb_frontend.c:2331:22: warning: cast to smaller integer type 'enum fe_sec_voltage' from 'void *' [-Wvoid-pointer-to-enum-cast]
                        fepriv->voltage = (enum fe_sec_voltage)parg;
                                          ^~~~~~~~~~~~~~~~~~~~~~~~~

../drivers/platform/msm/ipa/ipa_v2/ipa_debugfs.c:719:24: warning: cast to smaller integer type 'enum ipa_ip_type' from 'void *' [-Wvoid-pointer-to-enum-cast]
        enum ipa_ip_type ip = (enum ipa_ip_type)file

--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -763,6 +763,7 @@ EXTRA_CFLAGS += $(call cc-disable-warning, maybe-uninitialized) -Wno-unused-func
 ifeq ($(cc-name),clang)
 EXTRA_CFLAGS += $(call cc-option, -Wframe-larger-than=2048)
 EXTRA_CFLAGS += -Wno-enum-conversion
+EXTRA_CFLAGS += $(call cc-disable-warning, void-pointer-to-enum-cast)
 endif
 
 ifeq ($(CONFIG_WLAN_OFFLOAD_PACKETS),y)
