FIXME: ARM64/dts: mido: disable pa_therm1 vadc sensors
pa_therm1 isn't used for mido, and also it causes wrong cpu temperature sensor when hook by some apps. It's actually
hook soc / xo-therm-adc / thermal_zones_1 instead of cpu zones itself.

Disabling this zone will help app hook correctly cpu temperature.

References: https://github.com/zeta96/L_check_msm-4.9/commit/87119040b4e303b24bcd62e52131aebbe7759805#diff-5b850c3ef29634324680dbf7308c44ae
Signed-off-by: Dicky Herlambang <herlambangdicky5@gmail.com>

--- a/arch/arm64/boot/dts/qcom/mido/msm8953-general-mido.dtsi
+++ b/arch/arm64/boot/dts/qcom/mido/msm8953-general-mido.dtsi
@@ -77,6 +77,8 @@
 				qcom,decimation = <1>;
 				qcom,fast-avg-setup = <5>;
 			};
+
+			/delete-node/ chan@11;
 		};
 
 		pm8953_adc_tm: vadc@3400 {
@@ -84,6 +86,8 @@
 				qcom,decimation = <1>;
 				qcom,fast-avg-setup = <5>;
 			};
+
+			/delete-node/ chan@11;
 		};
 
 		/delete-node/ qcom,pm8953_typec@bf00;
@@ -454,6 +458,10 @@
 
 &thermal_zones {
 	chg-temp-adc {
+		status = "disabled";
+	};
+
+	pa-therm1-adc {
 		status = "disabled";
 	};
 };
